[gd_scene load_steps=13 format=1]

[ext_resource path="res://fiyork_time_management.gd" type="Script" id=1]
[ext_resource path="res://spaceship.scn" type="PackedScene" id=2]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=3]
[ext_resource path="res://outer_box.png" type="Texture" id=4]
[ext_resource path="res://inner_box.png" type="Texture" id=5]
[ext_resource path="res://pixel_arm.png" type="Texture" id=6]
[ext_resource path="res://pixel_crotch.png" type="Texture" id=7]
[ext_resource path="res://pixel_torso.png" type="Texture" id=8]
[ext_resource path="res://pixel.png" type="Texture" id=9]
[ext_resource path="res://fiyork_music.ogg" type="AudioStream" id=10]
[ext_resource path="res://bubble_green.png" type="Texture" id=11]
[ext_resource path="res://clean_button.png" type="Texture" id=12]

[node name="fiyork_time_management" type="Node2D"]

transform/pos = Vector2( 0, 50 )
script/script = ExtResource( 1 )

[node name="spaceship" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 549.546, 244.015 )

[node name="rock" parent="." instance_placeholder="res://rock.scn"]

transform/pos = Vector2( 2.51349, 183.6 )
contacts_reported = 13
script/script = null

[node name="rock_timer" type="Timer" parent="."]

process_mode = 0
wait_time = 3.5
one_shot = true
autostart = true

[node name="bullet_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = true

[node name="explosion" type="Particles2D" parent="."]

visibility/visible = false
config/amount = 50
config/lifetime = 1.0
config/process_mode = 1
config/explosiveness = 0.2
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="pop_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="day_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 120.0
one_shot = true
autostart = true

[node name="countdown_timer" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.75, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 97.0
margin/top = 430.0
margin/right = 253.0
margin/bottom = 486.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="success_background" type="Sprite" parent="."]

transform/pos = Vector2( 127.595, 5.26128 )
transform/scale = Vector2( 0.67839, 0.328205 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="success_background"]

transform/pos = Vector2( -45.6074, 21.1853 )
transform/scale = Vector2( 0.295924, 0.61932 )
texture = ExtResource( 5 )

[node name="Sprite1" type="Sprite" parent="success_background"]

transform/pos = Vector2( -0.366186, 21.1853 )
transform/scale = Vector2( 0.291602, 0.61932 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="success_background"]

transform/pos = Vector2( 44.5839, 20.3824 )
transform/scale = Vector2( 0.291161, 0.61932 )
texture = ExtResource( 5 )

[node name="points" type="RichTextLabel" parent="success_background"]

rect/scale = Vector2( 0.75, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -46.0
margin/top = -92.0
margin/right = 87.0
margin/bottom = -36.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Points"
visible_characters = -1

[node name="hundreths" type="RichTextLabel" parent="success_background"]

rect/scale = Vector2( 1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -62.0
margin/top = -8.0
margin/right = -22.0
margin/bottom = 63.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="tens" type="RichTextLabel" parent="success_background"]

rect/scale = Vector2( 1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -17.0
margin/top = -8.0
margin/right = 18.0
margin/bottom = 48.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="ones" type="RichTextLabel" parent="success_background"]

rect/scale = Vector2( 1, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = -9.0
margin/right = 64.0
margin/bottom = 44.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="pixel" type="Node2D" parent="."]

transform/pos = Vector2( 840.484, 280.642 )
transform/scale = Vector2( 3.82427, 4.64825 )

[node name="right_arm" type="Sprite" parent="pixel"]

transform/pos = Vector2( 22.9093, 2.63868 )
transform/rot = 29.5411
transform/scale = Vector2( 0.505258, 0.471641 )
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="hips" type="Sprite" parent="pixel"]

transform/pos = Vector2( -0.699182, 26.3054 )
transform/scale = Vector2( 0.397843, 0.431658 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_arm" type="Sprite" parent="pixel"]

transform/pos = Vector2( -21.115, 6.44016 )
transform/rot = -23.2198
transform/scale = Vector2( 0.652304, 0.435149 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="torso" type="Sprite" parent="pixel"]

transform/pos = Vector2( -0.293297, 4.03318 )
transform/scale = Vector2( 0.602398, 0.65611 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="pixel"]

transform/pos = Vector2( 1.09284, -33.3332 )
transform/scale = Vector2( 0.605566, 0.666796 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="pixel_button" type="LinkButton" parent="pixel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -36.0
margin/top = -54.0
margin/right = 40.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 10.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="menu" type="Node2D" parent="."]

process/pause_mode = 2
visibility/visible = false

[node name="background" type="Sprite" parent="menu"]

transform/pos = Vector2( 400.626, 285.092 )
transform/rot = 90.0
transform/scale = Vector2( 0.512996, 0.420472 )
texture = ExtResource( 11 )
flip_v = true

[node name="button" type="Sprite" parent="menu"]

transform/pos = Vector2( 376.95, 186.552 )
transform/scale = Vector2( 0.927181, 0.420472 )
texture = ExtResource( 12 )

[node name="button1" type="Sprite" parent="menu"]

transform/pos = Vector2( 375.28, 318.496 )
transform/scale = Vector2( 0.927181, 0.420472 )
texture = ExtResource( 12 )

[node name="button2" type="Sprite" parent="menu"]

transform/pos = Vector2( 373.569, 448.769 )
transform/scale = Vector2( 1.00835, 0.420472 )
texture = ExtResource( 12 )

[node name="sound" type="RichTextLabel" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 311.0
margin/top = 3.0
margin/right = 581.0
margin/bottom = 73.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sound"
visible_characters = -1

[node name="sound_slider" type="HSlider" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 186.0
margin/top = 63.0
margin/right = 569.0
margin/bottom = 79.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="return_to_game" type="LinkButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 223.0
margin/top = 165.0
margin/right = 539.0
margin/bottom = 212.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Return To Game"
underline = 2

[node name="return_to_village" type="LinkButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 219.0
margin/top = 295.0
margin/right = 551.0
margin/bottom = 342.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Return To Village"
underline = 2

[node name="return_to_main_menu" type="LinkButton" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 178.0
margin/top = 426.0
margin/right = 584.0
margin/bottom = 473.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Return To Main Menu"
underline = 2

[node name="are_you_sure" type="Node2D" parent="."]

process/pause_mode = 2
visibility/visible = false

[node name="background" type="Sprite" parent="are_you_sure"]

transform/pos = Vector2( 368.83, 227.713 )
transform/rot = 90.0
transform/scale = Vector2( 2.33761, 1.76346 )
texture = ExtResource( 5 )
flip_v = true

[node name="RichTextLabel" type="RichTextLabel" parent="are_you_sure"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 229.0
margin/top = 78.0
margin/right = 526.0
margin/bottom = 294.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Are you sure you want to go back to the village?"
visible_characters = -1

[node name="yes_village" type="LinkButton" parent="are_you_sure"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 320.0
margin/right = 503.0
margin/bottom = 367.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Yes"
underline = 2

[node name="no_village" type="LinkButton" parent="are_you_sure"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 263.0
margin/top = 320.0
margin/right = 357.0
margin/bottom = 367.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "No"
underline = 2

[node name="are_you_sure_2" type="Node2D" parent="."]

process/pause_mode = 2
visibility/visible = false

[node name="background" type="Sprite" parent="are_you_sure_2"]

transform/pos = Vector2( 371.906, 223.612 )
transform/rot = 90.0
transform/scale = Vector2( 2.31027, 1.81473 )
texture = ExtResource( 5 )
flip_v = true

[node name="RichTextLabel" type="RichTextLabel" parent="are_you_sure_2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 229.0
margin/top = 78.0
margin/right = 526.0
margin/bottom = 294.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Are you sure you want to go back to the main menu?"
visible_characters = -1

[node name="yes_main" type="LinkButton" parent="are_you_sure_2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 320.0
margin/right = 503.0
margin/bottom = 367.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Yes"
underline = 2

[node name="no_main" type="LinkButton" parent="are_you_sure_2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 263.0
margin/top = 320.0
margin/right = 357.0
margin/bottom = 367.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "No"
underline = 2

[connection signal="timeout" from="pop_timer" to="." method="_on_pop_timer_timeout"]

[connection signal="timeout" from="day_timer" to="." method="_on_day_timer_timeout"]

[connection signal="button_down" from="pixel/pixel_button" to="." method="_on_pixel_button_button_down"]

[connection signal="value_changed" from="menu/sound_slider" to="." method="_on_sound_slider_value_changed"]

[connection signal="button_down" from="menu/return_to_game" to="." method="_on_return_to_game_button_down"]

[connection signal="button_down" from="menu/return_to_village" to="." method="_on_return_to_village_button_down"]

[connection signal="button_down" from="menu/return_to_main_menu" to="." method="_on_return_to_main_menu_button_down"]

[connection signal="button_down" from="are_you_sure/yes_village" to="." method="_on_yes_village_button_down"]

[connection signal="button_down" from="are_you_sure/no_village" to="." method="_on_no_village_button_down"]

[connection signal="button_down" from="are_you_sure_2/yes_main" to="." method="_on_yes_main_button_down"]

[connection signal="button_down" from="are_you_sure_2/no_main" to="." method="_on_no_main_button_down"]


